[gd_scene load_steps=22 format=3 uid="uid://ne6w5hm2g26a"]

[ext_resource type="Script" path="res://entities/scripts/slime.gd" id="1_ueq5m"]
[ext_resource type="Texture2D" uid="uid://cq26sv4e6oflh" path="res://art/sprites/characters/slime.png" id="2_p3r8k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sfaks"]
atlas = ExtResource("2_p3r8k")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iylk"]
atlas = ExtResource("2_p3r8k")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d3im"]
atlas = ExtResource("2_p3r8k")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf6xf"]
atlas = ExtResource("2_p3r8k")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5681c"]
atlas = ExtResource("2_p3r8k")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpjh5"]
atlas = ExtResource("2_p3r8k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_es0xj"]
atlas = ExtResource("2_p3r8k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg8ic"]
atlas = ExtResource("2_p3r8k")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2jit"]
atlas = ExtResource("2_p3r8k")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27v3t"]
atlas = ExtResource("2_p3r8k")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khwo2"]
atlas = ExtResource("2_p3r8k")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k760"]
atlas = ExtResource("2_p3r8k")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8bss"]
atlas = ExtResource("2_p3r8k")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp2pn"]
atlas = ExtResource("2_p3r8k")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jawt"]
atlas = ExtResource("2_p3r8k")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dtaut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfaks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iylk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d3im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf6xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5681c")
}],
"loop": true,
"name": &"dealth",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpjh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es0xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg8ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2jit")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27v3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khwo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k760")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8bss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp2pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jawt")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tvlbf"]
radius = 54.037

[sub_resource type="CircleShape2D" id="CircleShape2D_x1m4p"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n2fls"]

[node name="Slime" type="CharacterBody2D" groups=["attackable"]]
z_index = 2
y_sort_enabled = true
script = ExtResource("1_ueq5m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 5)
sprite_frames = SubResource("SpriteFrames_dtaut")
animation = &"dealth"
offset = Vector2(0, -7)

[node name="detection" type="Area2D" parent="."]
z_index = 30
y_sort_enabled = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
visible = false
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_tvlbf")

[node name="attackCooldown" type="Timer" parent="."]

[node name="dealthtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="invFrames" type="Timer" parent="."]
wait_time = 0.7

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -7.0
offset_top = 6.0
offset_right = 133.0
offset_bottom = 33.0
scale = Vector2(0.1, 0.1)
max_value = 40.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_x1m4p")

[node name="hurtbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_n2fls")

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="dealthtimer" to="." method="_on_dealthtimer_timeout"]
[connection signal="timeout" from="invFrames" to="." method="_on_inv_frames_timeout"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="hurtbox" to="." method="_on_hurtbox_body_exited"]
